CreateRoom: use alternative to prevent error shifting

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,7 +40,6 @@ input {
 
 .error {
   color: red;
-  white-space: pre-wrap;
 }
 
 .starting-page {
